// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ec2InstanceRunningScheduler Type=Cluster Testing default schedule Should match snapshot: default 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Ec2InstanceRunningSchedulerSchedulerExecutionRole16E4E2DD": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ec2:StartInstances",
                    "ec2:StopInstances",
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:ec2:*:123456789012:instance/*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "ec2-instance-stop-policy",
          },
        ],
        "RoleName": "stop-ec2-instance-schedule-f180f971-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "Ec2InstanceRunningSchedulerStartSchedule1FDB0719F41BCB51": {
      "Properties": {
        "Description": "auto start ec2 instance(i-0af01c0123456789a,i-0af01c0123456789b) schedule.",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "auto-start-ec2-instance-1fdb0719-schedule",
        "ScheduleExpression": "cron(50 7 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "UTC",
        "State": "ENABLED",
        "Target": {
          "Arn": "arn:aws:scheduler:::aws-sdk:ec2:startInstances",
          "Input": "{"InstanceIds":["i-0af01c0123456789a","i-0af01c0123456789b"]}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "Ec2InstanceRunningSchedulerSchedulerExecutionRole16E4E2DD",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "Ec2InstanceRunningSchedulerStopSchedule1FDB07199E70AFE7": {
      "Properties": {
        "Description": "auto stop ec2 instance (i-0af01c0123456789a,i-0af01c0123456789b) schedule.",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "auto-stop-ec2-instance-1fdb0719-schedule",
        "ScheduleExpression": "cron(10 21 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "UTC",
        "State": "ENABLED",
        "Target": {
          "Arn": "arn:aws:scheduler:::aws-sdk:ec2:stopInstances",
          "Input": "{"InstanceIds":["i-0af01c0123456789a","i-0af01c0123456789b"]}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "Ec2InstanceRunningSchedulerSchedulerExecutionRole16E4E2DD",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Ec2InstanceRunningScheduler Type=Cluster Testing specify schedule Should match snapshot: specify 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Ec2InstanceRunningSchedulerSchedulerExecutionRole16E4E2DD": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ec2:StartInstances",
                    "ec2:StopInstances",
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:ec2:*:123456789012:instance/*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "ec2-instance-stop-policy",
          },
        ],
        "RoleName": "stop-ec2-instance-schedule-f180f971-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "Ec2InstanceRunningSchedulerStartSchedule1FDB0719F41BCB51": {
      "Properties": {
        "Description": "auto start ec2 instance(i-0af01c0123456789a,i-0af01c0123456789b) schedule.",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "auto-start-ec2-instance-1fdb0719-schedule",
        "ScheduleExpression": "cron(55 8 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": {
          "Arn": "arn:aws:scheduler:::aws-sdk:ec2:startInstances",
          "Input": "{"InstanceIds":["i-0af01c0123456789a","i-0af01c0123456789b"]}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "Ec2InstanceRunningSchedulerSchedulerExecutionRole16E4E2DD",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "Ec2InstanceRunningSchedulerStopSchedule1FDB07199E70AFE7": {
      "Properties": {
        "Description": "auto stop ec2 instance (i-0af01c0123456789a,i-0af01c0123456789b) schedule.",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "auto-stop-ec2-instance-1fdb0719-schedule",
        "ScheduleExpression": "cron(5 19 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": {
          "Arn": "arn:aws:scheduler:::aws-sdk:ec2:stopInstances",
          "Input": "{"InstanceIds":["i-0af01c0123456789a","i-0af01c0123456789b"]}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "Ec2InstanceRunningSchedulerSchedulerExecutionRole16E4E2DD",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
